--- a/popup.html
+++ b/popup.html
@@ -1,27 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cute Styled Switch</title>
-  <link rel="stylesheet" href="popup.css"> <!-- Linking to external CSS file -->
-</head>
-<body>
-  <div class="popup-container">
-    <h2>Toggle the Switch</h2> <!-- Add some text -->
-    <div class="switch-container">
-      <label class="switch">
-        <input type="checkbox" checked="checked">
-        <div class="button">
-          <div class="light"></div>
-          <div class="dots"></div>
-          <div class="characters"></div>
-          <div class="shine"></div>
-          <div class="shadow"></div>
-        </div>
-      </label>
-    </div>
-    <p>Turn the switch on or off to control the extension.</p> <!-- More text -->
-  </div>
-</body>
+<html>
+  <head>
+    <title>Auto Clicker</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        padding: 10px;
+      }
+    </style>
+  </head>
+  <body>
+    <h2>Auto Clicker Active</h2>
+    <p>This extension will automatically click the countdown at 2 minutes.</p>
+  </body>
 </html>
